Add %T to Log Format. Analyze time to process requests

--- a/templates/apache2.conf.j2
+++ b/templates/apache2.conf.j2
@@ -19,7 +19,7 @@ Timeout {{ apache_timeout }}
 HostnameLookups {{ 'On' if apache_enable_hostnamelookups else 'Off' }}
 LogLevel {{ apache_loglevel }}
 LogFormat "%v:%p %h %l %u %t \"%r\" %>s %O \"%{Referer}i\" \"%{User-Agent}i\"" vhost_combined
-LogFormat "%h (%{X-Forwarded-For}i) %V %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-agent}i\"" combined
+LogFormat "%T %h (%{X-Forwarded-For}i) %V %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-agent}i\"" combined
 LogFormat "%h %l %u %t \"%r\" %>s %O" common
 LogFormat "%{Referer}i -> %U" referer
 LogFormat "%{User-agent}i" agent
